--- a/backend/ToDo/ToDo/appsettings.json
+++ b/backend/ToDo/ToDo/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "ToDoDatabase": "Host=localhost; Username=postgres; Password=mysecretpassword"
+    },
+    "AllowedHosts": "*"
 }
