--- a/frontend/to-do-app/nginx.conf
+++ b/frontend/to-do-app/nginx.conf
@@ -1,7 +1,7 @@
 server {
   listen 8080;
 
-  root /usr/share/nginx/html;
+  root /usr/share/nginx/html/browser;
 
   location / {
     try_files $uri $uri/ /index.html =404;
