--- a/frontend/to-do-app/package.json
+++ b/frontend/to-do-app/package.json
@@ -16,6 +16,7 @@
     "@angular/core": "^17.3.1",
     "@angular/forms": "^17.3.1",
     "@angular/material": "^17.3.1",
+    "@angular/material-experimental": "^17.3.4",
     "@angular/platform-browser": "^17.3.1",
     "@angular/platform-browser-dynamic": "^17.3.1",
     "@angular/router": "^17.3.1",
