--- a/frontend/to-do-app/angular.json
+++ b/frontend/to-do-app/angular.json
@@ -25,8 +25,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "@angular/material/prebuilt-themes/deeppurple-amber.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -85,8 +84,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "@angular/material/prebuilt-themes/deeppurple-amber.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
